--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
-Project Name: Blank Template
-Client: Your Client
-Author: Your Name
+Project Name: Relaxr Landing Page
+Client: Relaxr
+Author: Grace Adamson
 Developer @GA in NYC
 */
 
@@ -46,12 +46,15 @@ Developer @GA in NYC
 /*******************************************/
 
 body {
-     color: #000;
-     font-size: 12px;
-     line-height: 1.4;
-     font-family: Helvetica, Arial, sans-serif;
-     background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
-      background-size: cover;
+  color: #000;
+  font-size: 12px;
+  line-height: 1.4;
+  font-family: 'Open Sans', sans-serif;
+  background: rgb(134,141,157);
+  background-size: cover;
+  margin: 0;
+  text-align: center;
+  display: block;
 }
 
 
@@ -68,17 +71,167 @@ body {
 }
 
 header {
+  width: 100%;
+  height: 100%;
+  color: #FFF;
+  background: url(../images/header_bg.jpg);
+  background-size: cover;
+  position: relative;
+  margin: auto;
+  padding: 15px 70px 250px 70px;
+  display: block;
+}
 
+main {
+  background-color: #f0efef;
+  margin: auto;
+  text-align: left;
+  width: 100%;
+  padding: 30px;
+  font-weight: 300;
+  color:#606161;
+  font-size: 13px;
+  display: block;
+}
+
+
+section {
+  width: 100%;
+  height: 100%;
+  color: #606161;
+  background: url(../images/testimonial_bg.jpg);
+  background-size: cover;
+  position: relative;
+  margin:0;
+  display: block;
+  font-weight: 300;
+}
+div {
+  background-color: #f9e42e;
+  margin: auto;
+  display: block;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 footer {
+  background-color: #232126;
+  margin: 0;
+  text-align: center;
+  padding-top: 20px;
+}
+
+button {
+  vertical-align: middle;
+  margin: auto;
+  padding: 5px 30px;
+  font-weight: 800;
+  font-size: 12px;
+}
+
+section p {
+  color: #606161;
+  font-size: 18px;
+  margin: 0;
+  font-weight: 300;
 
 }
+
+small {
+  background-color: #232126;
+  color: white;
+  font-size: 9px;
+  font-style: 600;
+  margin: 0;
+}
+
+small p {
+  background-color: #232126;
+  margin: 0;
+  padding-top:20px;
+  padding-bottom: 20px;
+}
+
+
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+#companyName {
+  font-size: 24px;
+  font-weight: 800;
+  color:white;
+  text-align: left;
+  padding-top: 20px;
+  margin:0; 
+}
+
+#slogan {
+  font-weight: 600;
+  font-size: 24px;
+}
 
 
+#getItNow {
+  background-color: #f9e42e;
+  color: #033048;
+  font-weight: 800;
+  font-size: 14px;
+  border: 5px;
+  vertical-align: middle;
+}
+
+#testimonial {
+  color: #606161;
+  font-weight: 300;
+  font-size: 18px;
+  font-style: italic;
+  padding: 30px 100px;
+}
+
+#benefits {
+  color:#121212;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#name {
+  font-weight: 600;
+  font-size: 18px;
+  margin: 0;
+  font-style: normal;
+  color: white;
+}
+
+
+#signUpNow {
+  padding: 10px;
+  background-color: #1F2E3F;
+  color: white;
+  font-size: 12px;
+}
+
+#footerName {
+  color: #f9e42e;
+  text-align: center;
+  padding-top: 10px;
+  margin: 0;
+  font-size: 24px;
+  font-weight: 800;
+}
+
+#twitter {
+  position: relative;
+  width:15px;
+  text-align: center;
+  padding-left: 1px;
+}
+
+#facebook {
+  position: relative;
+  width:6px;
+  text-align: center;
+  padding-right: 1px;
+}
 
